before merge new from pa

--- a/css/style.css
+++ b/css/style.css
@@ -716,6 +716,9 @@ body {
   background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#781bb9), to(#963ad6));
   background: -moz-linear-gradient(19% 75% 90deg, #963ad6, #781bb9);
 }
+/* ========================= //
+// =   tool tips           = //
+// ========================= */
 /* Grays *//* Accent Colors */
 html {
   overflow: none;
