--- a/css/style.css
+++ b/css/style.css
@@ -432,6 +432,71 @@ pre {
   font-size: 11px;
   padding: 0.5em;
 }
+/* ordered list */
+ol {
+  counter-reset: olfirst;
+  /* our father OL must have olfirst item reseted */
+}
+ol ol {
+  counter-reset: olsecond;
+  /* our sub OL's reset the olsecond, third must to be olthird and so on */
+}
+ol ol ol {
+  counter-reset: olthird;
+  /* our sub OL's reset the olsecond, third must to be olthird and so on */
+}
+ol li {
+  counter-increment: olfirst;
+  /* when we have a item that is children of first OL, it increases first counter*/
+
+}
+ol li ol li {
+  counter-increment: olsecond;
+  /* when the item is children of a OL that is children of another OL, so it is a sub OL */
+
+}
+ol li ol li ol li {
+  counter-increment: olthird;
+  /* when the item is children of a OL that is children of another OL, so it is a sub OL */
+
+}
+ol li:before {
+  content: counter(olfirst) " - ";
+  /* let's output our pretty number */
+
+}
+ol li ol li:before {
+  content: counter(olfirst) "." counter(olsecond) "." counter(olthird) " - ";
+  /* let's output our "sub-number" */
+
+}
+/* step ordered list */
+.step h1 {
+  counter-increment: first;
+  counter-reset: second;
+  font-size: 2.5em;
+  font-weight: bold;
+}
+.step h1:before {
+  content: "Step " counter(first) " - ";
+}
+.step h2 {
+  counter-increment: second;
+  counter-reset: third;
+  font-size: 2.0em;
+  font-weight: bold;
+}
+.step h2:before {
+  content: "Step " counter(second) " - ";
+}
+.step h3 {
+  counter-increment: third;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+.step h3:before {
+  content: counter(first) "." counter(second) "." counter(third) "-";
+}
 /*****************************
         fluid
  ****************************/
@@ -1049,22 +1114,26 @@ section#listing .grad {
   -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#efefef, endColorstr=#595959, GradientType=1)";
   background-image: -ms-linear-gradient(left, #595959, #595959);
 }
-.gcon4 .row, .gcon4 .row .row {
+fieldset {
+  width: 100%;
+  display: block;
+}
+fieldset .row, fieldset .row .row {
   width: 100%;
   margin: 5px auto;
   clear: both;
   display: block;
   position: relative;
 }
-.gcon4 .row .row {
+fieldset .row .row {
   margin: 0;
   position: relative;
 }
-.gcon4 .col {
+fieldset .col {
   margin-right: 2.6%;
   float: left;
 }
-.gcon4 .last {
+fieldset .last {
   margin-right: 0;
   float: right;
 }
