--- a/css/style.css
+++ b/css/style.css
@@ -168,8 +168,8 @@ input, select {
 /* line height in ems *//* convert to em */
 /* convert to em */
 body {
-  font-size: 75%;
   line-height: 1.5em;
+  font-size: 75%;
   font-family: Arial, sans-serif;
 }
 h1,
@@ -184,7 +184,6 @@ strong {
 .gigantic {
   font-size: 20em;
   line-height: 1.05em;
-  margin-bottom: 10px;
 }
 h1, .huge {
   font-size: 5em;
@@ -201,30 +200,47 @@ h3, .bigger {
 h4, .big {
   font-size: 2em;
   line-height: 1.125em;
-  margin-bottom: 0.75em;
-  margin-top: 0.375em;
 }
-h5, .strong {
+h5, .strong, strong {
   font-size: 1.5em;
   line-height: 0.25em;
-  margin-bottom: 1em;
-  margin-top: 0.25em;
 }
 h6, .small, small {
   font-size: 1em;
-  margin-bottom: 1.5em;
-  margin-top: 0.16666666666666666em;
+  line-height: 1.5em;
 }
 .tiny {
   font-size: 0.9em;
   padding: 0.3333333333333333em 0;
 }
 p {
-  margin-bottom: 0.6em;
+  font-size: 1em;
   word-wrap: break-word;
 }
 i, em {
   font-style: italic;
+}
+.justify {
+  text-align: justify;
+}
+a {
+  text-decoration: none;
+}
+/* Block Baselines */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul,
+ol,
+pre,
+blockquote,
+textarea,
+button {
+  margin: 5px 0 15px;
 }
 /* ================== //
 // =    hgroups     = //
@@ -406,7 +422,7 @@ pre {
   font-family: monospace;
   overflow: auto;
   font-size: 11px;
-  padding: 0.5em;
+  padding: 1em;
 }
 /* site containers layout 
 ---------------------------------------- */
@@ -1159,60 +1175,3 @@ section#precon .last {
 /* ================== //
 // =  media screen  = //
 // ================== */
-/* --------------- 1800 extra large --------- */
-@media only screen and (min-width : 1724px) {
-  
-}
-/* --------------- 1280 laptop/desktop ------ */
-@media only screen
-and (min-width: 1224px) {
-  #site {
-    width: 1220px;
-    background-color: green;
-  }
-}
-/* --------------- 1024 netbook ------------- */
-@media only screen
-and (min-width: 992px) {
-  #site {
-    width: 980px;
-    background-color: white;
-  }
-}
-/* --------------- 320 mobile --------------- */
-@media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
-  #site {
-    min-width: 320px;
-  }
-}
-/* --------------- 480px mobile ------------- */
-@media only screen
-and (min-width: 480px)
-and (max-width: 767px) {
-  #site {
-    min-width: 480px;
-    background-color: red;
-  }
-  #site .c4 .g1 {
-    min-width: 480px;
-  }
-}
-/* --------------- iPads (landscape) -------- */
-@media only screen  and (orientation : landscape) 
-and (min-device-width : 768px)
-and (max-device-width : 1024px) {
-  #site {
-    min-width: 1024px;
-  }
-}
-/* --------------- iPads (portrait) --------- */
-@media only screen and (orientation : portrait) 
-and (min-device-width : 768px)
-and (max-device-width : 1024px) {
-  #site {
-    min-width: 768;
-    background-color: blue;
-  }
-}
