--- a/less/_utility.less
+++ b/less/_utility.less
@@ -1,12 +1,13 @@
 /* nav */
 .hnav {
     .clear
-    li { float:left; display:block; }}
+    li { float:left; display:block; }
+}
 
 /* clear */
 .clear          { clear:both; }
-.clearfix:after { content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0; }
 .clearfix       { display: inline-block; }
+.clearfix:after { content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0; }
 
 /* image */
 .fullscale { width:100%; min-width:100%; height: auto; }
@@ -15,8 +16,11 @@
 .fright { float: right; }
 .fleft { float:left; }
 
-
-
+/* text align */
+.justify { text-align:justify; }
+.tleft { text-align:left }
+.tright { text-align:right }
+.tcenter { text-align:center }
 
 /* selections */
 ::selection 	 	{background: rgb(255,255,158);}
