--- a/less/_var.less
+++ b/less/_var.less
@@ -1,9 +1,9 @@
 /* Grays */ 
 @white:             #fff;
-@grayLighter:       #ccc;
-@grayLight:         #777;
-@gray:              #555;
-@grayDark:          #333;
+@greyLighter:       #ccc;
+@greyLight:         #777;
+@grey:              #555;
+@greyDark:          #333;
 @black:             #000;
 
 /* Accent Colors */
