--- a/less/_grid.less
+++ b/less/_grid.less
@@ -1,68 +1,57 @@
 /*****************************
-        fluid
+fluid
  ****************************/
-/* use c6 or c4 with row to setup column width                   */
-/* use nested .row.c6 or .c4 to establish 12 and 8 column layout */
-/* use .last to kill the margin at the last column               */
-@gutter: 2.6%;
-#grid {  
-    .c4, .c6 {
-        .row, .row .row {
-            width:100%;
-            margin:5px auto;
-            clear:both;
-            display: block;
-            position: relative;
-        }
-    .row .row { margin:0; position: relative; }
-    .col { margin-right: @gutter; float:left; } 
-    .last { margin-right:0; float:right; }
-    } 
-}
-.c4 .g1 { width:23.05%; }
-.c4 .g3 { width:74.35%; }
+/* default 12, up to 16, use @grids to change between 4 to 16 !note! its always smart to use more grids if the project is not planned before hand.
+ *
+ * @classes
+ * .last : kill last margin
+ * .row or .row.row to create full width containers,
+ * .col default column style
+ * .g1 to .g12 for grids
+ * */
 
-.c6 .g1 { width: 14.5%; }
-.c6 .g2 { width: 31.6%; }
-.c6 .g4 { width: 65.8%; }
-.c6 .g5 { width: 82.9%; }
+//grids variable doubled in style.less
+//@grids: 12; //# of grids, up to 16
+//@gut: 2.8%; //gutter width
+//@pad:0; //side paddings
 
-.c4 .g2, .c6 .g3 { width:48.7%; }
-.c4 .g4, .c6 .g6 { width:100%; margin:0; }
+.row, .row .row { position:relative; width:100%; margin:5px auto; clear:both; display:block; }
+.col { display:inline; float:left; margin-right: @gut; display:block;}
+.last { margin-right:0; float:right; clear:right; }
 
-.c4 .push(@grid:1) { margin-left: (@grid * 25.65% ); }
-.c6 .push(@grid:1) { margin-left: (@grid * 17.1% ); }
+//calc
+@content : 100 - ( 2 * @pad ); 
+@col: @content / @grids - @gut;
+@fullcol : @col + @gut;
 
-///* 
-// * @grids: 4; 
-// * @gut: 2.6;
-// * @pad:0;
-// * 
-// * #fluid {
-// * 
-// *     @col: @content / @grids - @gut;
-// * 
-// *     // calculations
-// *
-// *     @content : 100 - ( 2 * @pad ); 
-// *     @row-pad : 2 * @pad;
-// * 
-// * 
-// *     .col ( @grid : 1 ) {
-// *         displat:inline;
-// *         float:left;
-// *         width: ( @col + @gut) * @grid - @gut; 
-// *     }
-// *     .push {
-// * 
-// *     }
-// *     .last { margin-right:0; }
-// * 
-// *     .g1 { .col(1); }
-// *     .g2 { .col(2); }
-// *     .g3 { .col(3); }
-// *     .g4 { .col(4); }
-// *     .g5 { .col(5); }
-// * 
-// * }
-// */
+.singlecol ( @grid : 1 ) { width: ( @col + @gut) * @grid - @gut; }
+.g1  { .singlecol(1) }
+.g2  { .singlecol(2) }
+.g3  { .singlecol(3) }
+.g4  { .singlecol(4) }
+.g5  { .singlecol(5) }
+.g6  { .singlecol(6) }
+.g7  { .singlecol(7) }
+.g8  { .singlecol(8) }
+.g9  { .singlecol(9) }
+.g10 { .singlecol(10) }
+.g11 { .singlecol(11) }
+.g12 { .singlecol(12) }
+.g13 { .singlecol(13) }
+.g14 { .singlecol(14) }
+.g15 { .singlecol(15) }
+.g16 { .singlecol(16) }
+
+.push(@grid:1) { margin-left: (@grid * @fullcol ) }
+.p1 { .push(1) }
+.p2 { .push(2) }
+.p3 { .push(3) }
+.p4 { .push(4) }
+.p5 { .push(5) }
+.p6 { .push(6) }
+.p7 { .push(7) }
+.p8 { .push(8) }
+.p9 { .push(9) }
+.p10 { .push(10) }
+.p11 { .push(11) }
+
