--- a/less/_layout.less
+++ b/less/_layout.less
@@ -2,35 +2,34 @@
 ---------------------------------------- */
 #sitebase {
 
-    .body (@padding: 0, @overflow:  scroll) {
-        width:           100%;
-        height:          100%;
-        position:        relative;
-        margin:          auto;
-        text-rendering:  optimizeLegibility;
-        -webkit-text-size-adjust: 100%;
+    .html ( @xflow: hidden, @yflow: auto ) {
+        overflow-x:@xflow;
+        overflow-y:@yflow;
+        width:100%; height:100%;
+    }
+
+    .body (@h:100%, @padding: 0) {
+        min-height:@h;
         padding:         @padding;
-        overflow:        @overflow;
+        -webkit-text-size-adjust: 100%;
+        text-rendering:  optimizeLegibility;
     }
 
     .site (@siteWidth:960px, @siteHeight: 100%, @siteBgColor: #fff) {
-        position:          relative;
         z-index:           2;
+        margin:            0 auto;
+        position:          relative;
         max-width:         100%;
-        margin:            auto;
-        height:            @siteHeight;
         width:             @siteWidth;
+        height:            @siteHeight;
         background-color:  @siteBgColor;
+        .box-sizing;
     }
 }
 
 /* end site container layout */
-
-
 hr{ clear:both; }
 p { word-wrap:break-word; }
-blockquote { margin: 1em 3em; color: #999; border-left: 2px solid #999; padding-left: 1em; }
-pre { border:1px dashed #E1E1E1; color:#333344; background:#FAFAFA; font-family:monospace; overflow:auto; font-size:11px; padding:0.5em; }
 
 /* ordered list */
 ol { counter-reset: olfirst; /* our father OL must have olfirst item reseted */ }
@@ -76,6 +75,8 @@ ol ol ol { counter-reset: olthird; /* our sub OL's reset the olsecond, third mus
     h3:before {
         content: counter(first) "." counter(second) "." counter(third) "-";
     }
-}
 
+    ol,ul { margin:10px 0 10px 10px; }
+    ul { list-style-type:disc; }
+}
 
