--- a/less/_modules.less
+++ b/less/_modules.less
@@ -201,43 +201,47 @@
         }
 }
 
+
+
 /* ========================= //
 // =   tool tips           = //
 // ========================= */
 /*
  * dtip module TOOLS TIPS
  *
- * appy .dtip-container(width, margin); to any element eg: #tiped
+ * appy .dtip-container(width, margin) to any element eg: #tiped
  *
  * structure:
  * #tiped > the visible content 
  *
  * */
 
-.dtip-container(@contentwidth: 100%, @contentmargin:0) {
+.dtip-container( @contentwidth: 100%, @left:0) {
     position:relative;
     overflow:visible;
     z-index:999999;
+    width:100%;
+    height: 100%;
 
     &:hover .dtip-content {
-        opacity:1;
-        #animate > .transition( opacity 1s ease-in-out );
+        opacity:0.9;
+        display:block;
     }
     .dtip-content {
+        display:none;
         width: @contentwidth;
-        margin: @contentmargin;
+        left: @left;
         top:-30px;
         color:#fff;
         font-size:12px;
-        padding:4px 8px;
+        padding:2px 8px;
         position:absolute;
-	border: 1px solid rgba(255,255,255,0.25);
+
 	background-color: rgb(25,25,25);
 	background-color: rgba(25,25,25,0.92);
-        #gradient > .h(transparent, #000)
 
-	#border > .border-radius: 3px;
-        #shadow > .box-shadow( 0 0 3px #555; )
+	#border > .border-radius(5px);
+        #shadow > .box-shadow( 0 0 3px #555 );
 
         zoom:1;
         opacity:0;
