--- a/less/_font.less
+++ b/less/_font.less
@@ -56,6 +56,7 @@ hgroup.coudal {
         text-transform: uppercase;
         letter-spacing: 2px;
         font-weight: bold;
+        margin:0;
     }
 }
 hgroup.timoni {
@@ -109,6 +110,7 @@ hgroup.noob   {
         font-weight: 100;	
         float:right;
         clear:both;
+        margin:0;
     }
     h2 {
         font: bold 34px "Century Schoolbook", Georgia, Times, serif;
