--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -233,6 +233,11 @@
 	width  : @width;
 }
 
+.box(@b:100%) {
+    height: @b;
+    width:@b;
+}
+
 .columns(@columnCount:2, @columnGap : 20px) {
 	-webkit-column-count              : @columnCount;
 	-webkit-column-gap                : @columnGap;
