--- a/less/_formtable.less
+++ b/less/_formtable.less
@@ -13,6 +13,7 @@ button[type=button], button[type=reset], button[type=submit] {
 }
 textarea { line-height: 1.25; text-align: left; }
 
+
 /* Table
 ---------------------------------------- */
 table { border: 0; border-collapse: collapse; border-spacing: 0; line-height: 1.3; }
@@ -32,4 +33,13 @@ dl.table {
     margin-bottom:30px;
     dt { background:@yellow; color:#fff; float:left; font-weight:bold; margin-right:10px; padding:5px; clear:left; }
     dd {padding-top:10px; float:left; }
+}
+
+table.stripe {
+    tr:nth-child(odd) td {
+        background-color: #f9f9f9;
+    }
+    tr:hover td {
+        background-color: #f5f5f5;
+    }
 }
