fix font margin to .gigantic,.large,.bigger,.big,.small

--- a/less/_font.less
+++ b/less/_font.less
@@ -24,7 +24,9 @@ a { text-decoration:none; }
 /* Block Baselines */
 h1, h2, h3, h4, h5, h6,
 p, ul, ol, pre, blockquote,
-textarea, button {
+textarea, button, .gigantic,
+.huge,.large,.bigger,.big,
+.strong,.small {
     margin: 5px 0 15px;
 }
 
