--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,14 @@ ol,
 pre,
 blockquote,
 textarea,
-button {
+button,
+.gigantic,
+.huge,
+.large,
+.bigger,
+.big,
+.strong,
+.small {
   margin: 5px 0 15px;
 }
 /* ================== //
@@ -585,6 +592,82 @@ table.stripe tr:nth-child(odd) td {
 table.stripe tr:hover td {
   background-color: #f5f5f5;
 }
+/* ========================= //
+// =   css3 form           = //
+// ========================= */
+.sexyform form {
+  border: 1px solid #270644;
+  width: 250px;
+  margin: 50px auto;
+  padding: 20px;
+  -webkit-background-clip: padding-box;
+  -webkit-border-radius: 20px;
+  -moz-background-clip: padding-box;
+  -moz-border-radius: 20px;
+  border-radius: 20px;
+  background-clip: padding-box;
+  -webkit-box-shadow: 0 -5px 60px #270644;
+  -moz-box-shadow: 0 -5px 60px #270644;
+  box-shadow: 0 -5px 60px #270644;
+  background: -moz-linear-gradient(19% 75% 90deg, #4e0085, #963ad6);
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963ad6), to(#4e0085));
+}
+.sexyform label {
+  font-size: 12px;
+  font-family: arial, sans-serif;
+  list-style-type: none;
+  color: #fff;
+  text-shadow: #000 1px 1px;
+  margin-bottom: 10px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  display: block;
+}
+.sexyform input {
+  -webkit-transition-property: -webkit-box-shadow, background;
+  -webkit-transition-duration: 0.25s;
+  padding: 6px;
+  border-bottom: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-top: 1px solid #ad64e0;
+  -moz-box-shadow: 0px 0px 2px #000;
+  -webkit-box-shadow: 0px 0px 2px #000;
+  margin-bottom: 10px;
+  background: #8a33c6;
+  width: 230px;
+}
+.sexyform input:hover {
+  -webkit-box-shadow: 0px 0px 4px #000;
+  background: #9d39e1;
+}
+.sexyform input.submit {
+  -webkit-transition-property: -webkit-box-shadow, background;
+  -webkit-transition-duration: 0.25s;
+  width: 100px;
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963ad6), to(#781bb9));
+  background: -moz-linear-gradient(19% 75% 90deg, #781bb9, #963ad6);
+  color: #fff;
+  text-transform: uppercase;
+  text-shadow: #000 1px 1px;
+  border-top: 1px solid #ad64e0;
+  margin-top: 10px;
+}
+.sexyform input.submit:hover {
+  -webkit-box-shadow: 0px 0px 2px #000;
+  -webkit-box-shadow: 0 0 2 p #000000;
+  -moz-box-shadow: 0 0 2 p #000000;
+  box-shadow: 0 0 2 p #000000;
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963ad6), to(#781bb9));
+  background: -moz-linear-gradient(19% 75% 90deg, #781bb9, #963ad6);
+}
+.sexyform input.submit:active {
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#781bb9), to(#963ad6));
+  background: -moz-linear-gradient(19% 75% 90deg, #963ad6, #781bb9);
+}
+/* 
+ */
 /* nav */
 .hnav .clear li {
   float: left;
