--- a/less/_formtable.less
+++ b/less/_formtable.less
@@ -13,6 +13,10 @@ button[type=button], button[type=reset], button[type=submit] {
 }
 textarea { line-height: 1.25; text-align: left; }
 
+fieldset .inline {
+    
+}
+
 
 /* Table
 ---------------------------------------- */
@@ -21,7 +25,6 @@ caption, th, td { text-align: left; vertical-align: top; }
 th, td { border: 1px solid; padding: .5em 1em; }
 caption { padding-bottom: 1em; }
 th { font-weight: bold; }
-
 
 dl {
     padding:10px;
@@ -43,3 +46,214 @@ table.stripe {
         background-color: #f5f5f5;
     }
 }
+
+
+/* ========================= //
+// =   css3 form           = //
+// ========================= */
+
+.sexyform {  
+    form {
+        border: 1px solid #270644;
+        width: 250px;
+        margin:50px auto;
+        padding: 20px;
+        #border > .border-radius( 20px );
+        #shadow > .box-shadow ( 0, -5px, 60px, #270644 );
+        background:-moz-linear-gradient(19% 75% 90deg,#4E0085, #963AD6);
+        background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#4E0085));
+}
+
+label {
+    font-size: 12px;
+    font-family: arial, sans-serif;
+    list-style-type: none;
+    color: #fff;
+    text-shadow: #000 1px 1px;
+    margin-bottom: 10px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    display: block;
+}
+
+input {
+    -webkit-transition-property: -webkit-box-shadow, background;
+    -webkit-transition-duration: 0.25s;
+    padding: 6px;
+    border-bottom: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-top: 1px solid #ad64e0;
+    -moz-box-shadow: 0px 0px 2px #000;
+    -webkit-box-shadow: 0px 0px 2px #000;
+    margin-bottom: 10px;
+    background: #8a33c6;
+    width: 230px;
+    &:hover {
+        -webkit-box-shadow: 0px 0px 4px #000;
+        background: #9d39e1;
+    }
+}
+
+input.submit {
+    -webkit-transition-property: -webkit-box-shadow, background;
+    -webkit-transition-duration: 0.25s;
+    width: 100px;
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#781bb9));   
+    background:  -moz-linear-gradient(19% 75% 90deg,#781bb9, #963AD6);
+    color: #fff;
+    text-transform: uppercase;
+    text-shadow: #000 1px 1px;
+    border-top: 1px solid #ad64e0;
+    margin-top: 10px;
+
+    &:hover {
+        -webkit-box-shadow: 0px 0px 2px #000;
+        #shadow > .box-shadow ( 0, 0, 2p, #000 );
+        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#781bb9));
+        background:  -moz-linear-gradient(19% 75% 90deg,#781bb9, #963AD6);
+    } 
+
+    &:active {
+        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#781bb9), to(#963AD6));
+        background:  -moz-linear-gradient(19% 75% 90deg,#963AD6, #781bb9);
+    }
+
+}
+}
+
+// ========================= //
+// =    button             = //
+// ========================= //
+
+/* 
+ */
+
+.btn_pulse{
+    background: #222 url(/images/alert-overlay.png) repeat-x;
+    display: inline-block;
+    padding: 5px 10px 6px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+    line-height: 1;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-box-shadow: 0 1px 3px #999;
+    -webkit-box-shadow: 0 1px 3px #999;
+    text-shadow: 0 -1px 1px #222;
+    border-bottom: 1px solid #222;
+    position: relative;
+    cursor: pointer;
+    -moz-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    -webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.5);
+    text-shadow: 0 -1px 1px rgba(0,0,0,0.25);
+    border-bottom: 1px solid rgba(0,0,0,0.25);
+        &:hover {
+            Colors:#eee;
+            -moz-box-shadow:inset 0 1px 1px #999;
+            -webkit-box-shadow:inset 0 1px 1px #999;
+        }
+    }
+
+    /* Sizes ---------- */
+    .small.btn_pulse  { font-size: 10px; }
+    .medium.btn_pulse { font-size: 13px; }
+    .large.btn_pulse  { font-size: 18px; padding: 8px 14px 9px; }
+
+    /* Colors ---------- */
+    .blue.btn_pulse    { background-color: #2daebf; }
+    .red.btn_pulse     { background-color: #e33100; }
+    .magenta.btn_pulse { background-color: #a9014b; }
+    .orange.btn_pulse  { background-color: #ff5c00; }
+    .yellow.btn_pulse  { background-color: #ffb515; }
+
+
+    .g_btn {
+        padding: 4px 10px;
+        -webkit-border-radius: 2px 2px;
+        border: solid 1px rgb(153, 153, 153);
+        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(rgb(255, 255, 255)), to(rgb(221, 221, 221)));
+        color: #333;
+        text-decoration: none;
+        cursor: pointer;
+        display: inline-block;
+        text-align: center;
+        text-shadow: 0px 1px 1px rgba(255,255,255,1);
+        line-height: 1;
+
+        &:hover {
+            -moz-box-shadow:inset 0 1px 1px #999;
+            -webkit-box-shadow:inset 0 1px 1px #999;
+        }
+    }
+
+
+    @-webkit-keyframes greenPulse {
+        from { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333; }
+        50% { background-color: #91bd09; -webkit-box-shadow: 0 0 18px #91bd09; }
+        to { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333; }
+    }
+
+    @-webkit-keyframes bigAssButtonPulse {
+        from { background-color: #749a02; -webkit-box-shadow: 0 0 25px #333; }
+        50% { background-color: #91bd09; -webkit-box-shadow: 0 0 50px #91bd09; }
+        to { background-color: #749a02; -webkit-box-shadow: 0 0 25px #333; }
+    }
+
+    @-webkit-keyframes greenPulse {
+        from { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333; }
+        50% { background-color: #91bd09; -webkit-box-shadow: 0 0 18px #91bd09; }
+        to { background-color: #749a02; -webkit-box-shadow: 0 0 9px #333; }
+    }
+
+    @-webkit-keyframes bluePulse {
+        from { background-color: #007d9a; -webkit-box-shadow: 0 0 9px #333; }
+        50% { background-color: #2daebf; -webkit-box-shadow: 0 0 18px #2daebf; }
+        to { background-color: #007d9a; -webkit-box-shadow: 0 0 9px #333; }
+    }
+
+    @-webkit-keyframes redPulse {
+        from { background-color: #bc330d; -webkit-box-shadow: 0 0 9px #333; }
+        50% { background-color: #e33100; -webkit-box-shadow: 0 0 18px #e33100; }
+        to { background-color: #bc330d; -webkit-box-shadow: 0 0 9px #333; }
+    }
+
+    @-webkit-keyframes magentaPulse {
+        from { background-color: #630030; -webkit-box-shadow: 0 0 9px #333; }
+        50% { background-color: #a9014b; -webkit-box-shadow: 0 0 18px #a9014b; }
+        to { background-color: #630030; -webkit-box-shadow: 0 0 9px #333; }
+    }
+
+    @-webkit-keyframes orangePulse {
+        from { background-color: #d45500; -webkit-box-shadow: 0 0 9px #333; }
+        50% { background-color: #ff5c00; -webkit-box-shadow: 0 0 18px #ff5c00; }
+        to { background-color: #d45500; -webkit-box-shadow: 0 0 9px #333; }
+    }
+
+    @-webkit-keyframes orangellowPulse {
+        from { background-color: #fc9200; -webkit-box-shadow: 0 0 9px #333; }
+        50% { background-color: #ffb515; -webkit-box-shadow: 0 0 18px #ffb515; }
+        to { background-color: #fc9200; -webkit-box-shadow: 0 0 9px #333; }
+    }
+
+
+    .greenglow {
+        -webkit-animation-name: greenPulse;
+        -webkit-animation-duration: 2s;
+        -webkit-animation-iteration-count: infinite;
+    }
+
+    .orangellowglow {
+        -webkit-animation-name: orangellowPulse;
+        -webkit-animation-duration: 2s;
+        -webkit-animation-iteration-count: infinite;
+    }
+
+    .orangeglow {
+        -webkit-animation-name: orangePulse;
+        -webkit-animation-duration: 2s;
+        -webkit-animation-iteration-count: infinite;
+    }
+
