--- a/less/_grid.less
+++ b/less/_grid.less
@@ -16,7 +16,7 @@ fluid
 //@pad:0; //side paddings
 
 .row, .row .row { position:relative; width:100%; margin:5px auto; clear:both; display:block; }
-.col { display:inline; float:left; margin-right: @gut; display:block;}
+.col {  float:left; margin-right: @gut; display:block;}
 .last { margin-right:0; float:right; clear:right; }
 
 //calc
