--- a/less/_formtable.less
+++ b/less/_formtable.less
@@ -14,7 +14,9 @@ button[type=button], button[type=reset], button[type=submit] {
 textarea { line-height: 1.25; text-align: left; }
 
 fieldset .inline {
-    
+    input, textarea, select, button {
+        display:inline; float:left;
+    }
 }
 
 
@@ -62,73 +64,70 @@ table.stripe {
         #shadow > .box-shadow ( 0, -5px, 60px, #270644 );
         background:-moz-linear-gradient(19% 75% 90deg,#4E0085, #963AD6);
         background:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#4E0085));
-}
-
-label {
-    font-size: 12px;
-    font-family: arial, sans-serif;
-    list-style-type: none;
-    color: #fff;
-    text-shadow: #000 1px 1px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    display: block;
-}
-
-input {
-    -webkit-transition-property: -webkit-box-shadow, background;
-    -webkit-transition-duration: 0.25s;
-    padding: 6px;
-    border-bottom: 0px;
-    border-left: 0px;
-    border-right: 0px;
-    border-top: 1px solid #ad64e0;
-    -moz-box-shadow: 0px 0px 2px #000;
-    -webkit-box-shadow: 0px 0px 2px #000;
-    margin-bottom: 10px;
-    background: #8a33c6;
-    width: 230px;
-    &:hover {
-        -webkit-box-shadow: 0px 0px 4px #000;
-        background: #9d39e1;
     }
-}
 
-input.submit {
-    -webkit-transition-property: -webkit-box-shadow, background;
-    -webkit-transition-duration: 0.25s;
-    width: 100px;
-    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#781bb9));   
-    background:  -moz-linear-gradient(19% 75% 90deg,#781bb9, #963AD6);
-    color: #fff;
-    text-transform: uppercase;
-    text-shadow: #000 1px 1px;
-    border-top: 1px solid #ad64e0;
-    margin-top: 10px;
+    label {
+        font-size: 12px;
+        font-family: arial, sans-serif;
+        list-style-type: none;
+        color: #fff;
+        text-shadow: #000 1px 1px;
+        margin-bottom: 10px;
+        font-weight: bold;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        display: block;
+    }
 
-    &:hover {
+    input {
+        -webkit-transition-property: -webkit-box-shadow, background;
+        -webkit-transition-duration: 0.25s;
+        padding: 6px;
+        border-bottom: 0px;
+        border-left: 0px;
+        border-right: 0px;
+        border-top: 1px solid #ad64e0;
+        -moz-box-shadow: 0px 0px 2px #000;
         -webkit-box-shadow: 0px 0px 2px #000;
-        #shadow > .box-shadow ( 0, 0, 2p, #000 );
-        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#781bb9));
-        background:  -moz-linear-gradient(19% 75% 90deg,#781bb9, #963AD6);
-    } 
-
-    &:active {
-        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#781bb9), to(#963AD6));
-        background:  -moz-linear-gradient(19% 75% 90deg,#963AD6, #781bb9);
+        margin-bottom: 10px;
+        background: #8a33c6;
+        width: 230px;
+        &:hover {
+            -webkit-box-shadow: 0px 0px 4px #000;
+            background: #9d39e1;
+        }
     }
 
-}
+    input.submit {
+        -webkit-transition-property: -webkit-box-shadow, background;
+        -webkit-transition-duration: 0.25s;
+        width: 100px;
+        background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#781bb9));   
+        background:  -moz-linear-gradient(19% 75% 90deg,#781bb9, #963AD6);
+        color: #fff;
+        text-transform: uppercase;
+        text-shadow: #000 1px 1px;
+        border-top: 1px solid #ad64e0;
+        margin-top: 10px;
+
+        &:hover {
+            -webkit-box-shadow: 0px 0px 2px #000;
+            #shadow > .box-shadow ( 0, 0, 2p, #000 );
+            background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#963AD6), to(#781bb9));
+            background:  -moz-linear-gradient(19% 75% 90deg,#781bb9, #963AD6);
+        } 
+
+        &:active {
+            background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#781bb9), to(#963AD6));
+            background:  -moz-linear-gradient(19% 75% 90deg,#963AD6, #781bb9);
+        }
+
+    }
 }
 
 // ========================= //
 // =    button             = //
 // ========================= //
-
-/* 
- */
 
 .btn_pulse{
     background: #222 url(/images/alert-overlay.png) repeat-x;
