--- a/less/_utility.less
+++ b/less/_utility.less
@@ -28,3 +28,6 @@
 img::selection 		{background: transparent;}
 img::-moz-selection	{background: transparent;}
 body {-webkit-tap-highlight-color: rgb(255,255,158);}
+
+/* background color */
+.backgrey { background-color:grey; }
