--- a/less/_utility.less
+++ b/less/_utility.less
@@ -30,4 +30,4 @@ img::-moz-selection	{background: transparent;}
 body {-webkit-tap-highlight-color: rgb(255,255,158);}
 
 /* background color */
-.backgrey { background-color:grey; }
+.backgrey { background-color:#eee; }
