--- a/css/style.css
+++ b/css/style.css
@@ -739,7 +739,7 @@ body {
 }
 /* background color */
 .backgrey {
-  background-color: grey;
+  background-color: #eee;
 }
 /*
  * #border      > .border-radius    ( radius                                                                              );
@@ -907,85 +907,85 @@ fluid
   clear: right;
 }
 .g1 {
-  width: 5.733333333333334%;
+  width: 5.949999999999999%;
 }
 .g2 {
-  width: 14.066666666666668%;
+  width: 14.499999999999998%;
 }
 .g3 {
-  width: 22.4%;
+  width: 23.049999999999997%;
 }
 .g4 {
-  width: 30.733333333333334%;
+  width: 31.599999999999994%;
 }
 .g5 {
-  width: 39.06666666666667%;
+  width: 40.14999999999999%;
 }
 .g6 {
-  width: 47.4%;
+  width: 48.699999999999996%;
 }
 .g7 {
-  width: 55.733333333333334%;
+  width: 57.24999999999999%;
 }
 .g8 {
-  width: 64.06666666666668%;
+  width: 65.8%;
 }
 .g9 {
-  width: 72.4%;
+  width: 74.35%;
 }
 .g10 {
-  width: 80.73333333333335%;
+  width: 82.89999999999999%;
 }
 .g11 {
-  width: 89.06666666666668%;
+  width: 91.44999999999999%;
 }
 .g12 {
-  width: 97.4%;
+  width: 100%;
 }
 .g13 {
-  width: 105.73333333333335%;
+  width: 108.55%;
 }
 .g14 {
-  width: 114.06666666666668%;
+  width: 117.1%;
 }
 .g15 {
-  width: 122.40000000000002%;
+  width: 125.64999999999998%;
 }
 .g16 {
-  width: 130.73333333333335%;
+  width: 134.2%;
 }
 .p1 {
-  margin-left: 8.333333333333334%;
+  margin-left: 8.549999999999999%;
 }
 .p2 {
-  margin-left: 16.666666666666668%;
+  margin-left: 17.099999999999998%;
 }
 .p3 {
-  margin-left: 25%;
+  margin-left: 25.65%;
 }
 .p4 {
-  margin-left: 33.333333333333336%;
+  margin-left: 34.199999999999996%;
 }
 .p5 {
-  margin-left: 41.66666666666667%;
+  margin-left: 42.74999999999999%;
 }
 .p6 {
-  margin-left: 50%;
+  margin-left: 51.3%;
 }
 .p7 {
-  margin-left: 58.333333333333336%;
+  margin-left: 59.849999999999994%;
 }
 .p8 {
-  margin-left: 66.66666666666667%;
+  margin-left: 68.39999999999999%;
 }
 .p9 {
-  margin-left: 75%;
+  margin-left: 76.94999999999999%;
 }
 .p10 {
-  margin-left: 83.33333333333334%;
+  margin-left: 85.49999999999999%;
 }
 .p11 {
-  margin-left: 91.66666666666667%;
+  margin-left: 94.04999999999998%;
 }
 /* Grays *//* Accent Colors */
 html {
