add background blue .backblue

--- a/less/_utility.less
+++ b/less/_utility.less
@@ -18,9 +18,12 @@
 
 /* text align */
 .justify { text-align:justify; }
-.tleft { text-align:left }
-.tright { text-align:right }
-.tcenter { text-align:center }
+.textl { text-align:left }
+.textr { text-align:right }
+.textc { text-align:center }
+.textinnerc {
+    div, p, span { text-align:center; }
+}
 
 /* selections */
 ::selection 	 	{background: rgb(255,255,158);}
@@ -31,3 +34,4 @@ body {-webkit-tap-highlight-color: rgb(255,255,158);}
 
 /* background color */
 .backgrey { background-color:#eee; }
+.backblue { background-color:#77d7f9; }
